# KPA_Gateway

./: LICENSE  README.md  pyproject.toml
kpa_gateway/: __main__.py  api_gateway.py  decorator_test.py  frame_parser.py  gateway_server.py  socket_client.py  socket_server.py  utils.py  worker.py
kpa_gateway/ats_emulator/: args_widgets.py  backend.py  frontend.ui  widgets.py
kpa_gateway/frame_types/: address_telemetry.py  base_types.py  control_command.py  message.py  position_telemetry.py  receipt.py
kpa_gateway/gateway_ui/: backend.py  frontend.ui
