[tool.poetry]
name = "kpa-gateway"
version = "0.1.0"
description = ""
authors = ["CrinitusFeles <crinitusfeles@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
loguru = "^0.7.2"
event = {git = "https://github.com/CrinitusFeles/Event.git"}
python-tcp = {git = "https://github.com/CrinitusFeles/PythonTCP.git"}


[tool.poetry.group.ui.dependencies]
pyqt6 = "^6.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
select = ["E", "F", "PL"]
ignore = ["PLR2004", "PLR0913"]